Update on Overleaf.

--- a/report.tex
+++ b/report.tex
@@ -375,8 +375,8 @@
 \include{chapterAPPX_EMIS_2019}
 %\include{chapterAPPX_EMIS_trends}
 \include{chapterAPPX_SR_2019}
-%\include{chapterAPPX_CountryRep}
-%\include{chapterAPPX_ModelEval}
+\include{chapterAPPX_CountryRep}
+\include{chapterAPPX_ModelEval}
 
 \end{appendix}
 \end{document}
