--- a/EMEP_Reports.bib
+++ b/EMEP_Reports.bib
@@ -1109,6 +1109,15 @@ methods within the EMEP},
   note = {Available for 49 countries, at \url{www.emep.int/mscw/mscw_publications.html}}
 }
 
+@TECHREPORT{Klein:2021,
+  author = {Klein, H. and Gauss, M. and Tsyro, S. and Nyiri, A. and Fagerli, H. and Wind, P.},
+  title = {{Transboundary air pollution by sulphur, nitrogen, ozone and particulate matter in 2019, Country Reports}},
+  institution = metno,
+  year = {2021},
+  number = {{EMEP MSC-W Note 1/2021 Individual Country Reports}},
+  note = {Available for 49 countries, at \url{www.emep.int/mscw/mscw_publications.html}}
+}
+
 @TECHREPORT{Gauss:2014,
   author = {Gauss, M.  and Semeena, V. S.  and Benedictow, A. C. and Klein, H.},
   title = {{Transboundary Data by Main Pollutants (S,N,O3) and PM Country Reports}},
