--- a/chapterAPPX_ModelEval.tex
+++ b/chapterAPPX_ModelEval.tex
@@ -6,33 +6,28 @@
 \chapter[2019 Model Evaluation]{Model Evaluation}
 \label{ch:appx_modeleval}
 
-\old{TODO}
+\old{MG still working on this}
 
 %The purpose of this appendix is to make readers of this report better
 %aware of our web resources (evaluation report/supplementary material)
 %\vspace{30pt}
 
-The EMEP MSC-W model is regularly evaluated against various kinds of measurements, including ground-based, airborne and satellite measurements. As the main application of the EMEP MSC-W model within the LRTAP Convention is to assess the status of air quality on regional scales and to quantify long-range transboundary air pollution, the focus of the evaluation performed for the EMEP status reports is on the EMEP measurement sites.
+The EMEP MSC-W model is regularly evaluated against various kinds of measurements, including ground-based, airborne and satellite measurements.
 
-Only parts of this evaluation are included in the printed version of the EMEP status report. A more comprehensive collection of maps, graphs and statistical analyses, including a more detailed discussion of model performance, are freely available as supplementary material from the MSC-W report page on the EMEP website:\\ \url{https://emep.int/mscw/mscw_publications.html}
+%As the main application of the EMEP MSC-W model within the LRTAP Convention is to assess the status of air quality on regional scales and to quantify long-range transboundary air pollution, the focus of the evaluation performed for the EMEP status reports is on the EMEP measurement sites.
 
-This year, the evaluation report is found under the link 'Supplementary material to EMEP Status Report 1/2020'. It contains a comprehensive evaluation of the EMEP MSC-W model for air concentrations and depositions in 2018. The report is divided into three chapters, dealing with pollutants responsible for eutrophication and acidification \citep{WEB2020:SN}, ground level ozone and nitrogen dioxide
-\citep{WEB2020:O3}, and particulate matter \citep{WEB2020:PM}, respectively.\\
+%Only parts of this evaluation are included in the printed version of the EMEP status report. A more comprehensive collection of maps, graphs and statistical analyses, including a more detailed discussion of model performance, are freely available as supplementary material from the MSC-W report page on the EMEP website:\\ \url{https://emep.int/mscw/mscw_publications.html}
 
-The agreement between model and measurements in 2018 is visualized as:
-\begin{itemize}
-\item scatter plots for the EMEP MSC-W model domain;
-\item time series for individual EMEP stations;
-\item horizontal maps combining model results and EMEP measurement data.
-\end{itemize}
+%This year, the evaluation report is found under the link 'Supplementary material to EMEP Status Report 1/2021'. It contains a comprehensive evaluation of the EMEP MSC-W model for air concentrations and depositions in 2018. The report is divided into three chapters, dealing with pollutants responsible for eutrophication and acidification \citep{WEB2021:SN}, ground level ozone and nitrogen dioxide \citep{WEB2020:O3}, and particulate matter \citep{WEB2020:PM}, respectively.\\
 
-Tables summarize common statistical measures of model score, such as bias, root mean square error, temporal and spatial correlations and the index of agreement (see Chapter \ref{ch:Intro}).
+%The agreement between model and measurements in 2018 is visualized as:
+%\begin{itemize}
+%\item scatter plots for the EMEP MSC-W model domain;
+%\item time series for individual EMEP stations;
+%\item horizontal maps combining model results and EMEP measurement data.
+%\end{itemize}
 
-This type of model evaluation is performed on an annual basis and can be downloaded from the same web page also for previous years.\\
-
-\vspace{1cm}
-
-A major effort this year has been put into the development of a web
+EMEP MSC-W model performance is visualized through a new web
 interface that presents a detailed evaluation against measurements from
 the European Environment Agency's (EEA) Air Quality e-Reporting Database:\\
 \url{https://aerocom-evaluation.met.no/main.php?project=emep}\\
@@ -71,10 +66,384 @@ observations of the aerosol light absorption coefficient, accessed through
 the Global Atmospheric Watch - WDCA database EBAS
 (\url{http://ebas.nilu.no/}). More details about this can be found in Chapter~\ref{ch:EC}.
 
+\vspace{1cm}
+
+Tables~\ref{tab:tableSN} summarize common statistical measures of model score, such as bias, root mean square error, temporal and spatial correlations and the index of agreement (see Chapter \ref{ch:Intro}) against EMEP measurement stations.
+
+\begin{table}\small
+% in 2013 (for reporting 2011), the numbers in this table were taken from:
+% /vol/fou/emep/ModelRuns/2013_REPORTING/Verifications/rv4_2599.2011.noGrims/Res_Base_Best_noVol_rv4_2599.2011
+
+% in 2014 (for reporting 2012), the numbers in this table were taken from:
+% /vol/fou/emep/ModelRuns/2014_REPORTING/rv4.5_2809.2012/STATIS/Res_rv4.5_2809.2012_dh500_SNrep (file date: 7 Jul 2014, 15:17)
+
+% in 2015 (for reporting 2013), the numbers in this table were taken from:
+% /vol/fou/emep/ModelRuns/2015_REPORTING/VERIFICATION/STATISTICS/Res_rv4.7_3024.2013_h500-outliers (file date: 14 Jul 2015, 12:04)
+
+% in 2016 (for reporting 2014), the numbers in this table were taken from:
+%/lustre/storeB/project/fou/kl/emep/ModelRuns/2016_REPORTING/VERIFICATION/STATISTICS/Res_3245.Smix_h500-outliers_comdays (file date: 01 Jul 2016, 00:17)
+
+% in 2017 (for reporting 2015), the numbers in this table were taken from:
+%/lustre/storeA/project/fou/kl/emep/ModelRuns/2017_REPORTING/VERIFICATION_Rep2017/STATISTICS/Res_EMEP01_L34_rv4_14.2015_h500-outliers_comday (file date: 03 Jul 2017, 15:04)
+
+% in 2018 (for reporting 2016), the numbers in this table were taken from:
+% /lustre/storeB/project/fou/kl/emep/ModelRuns/2018_REPORTING/VERIFICATION_Rep18/STATISTICS/Res_EMEP01_L20EC_rv4_17a.2016_LocCorAll_h500-outliers_comday_noNO42 (file date: 06 Aug 2018, 09:25)
+
+% in 2019 (for reporting 2017), the numbers in this table were taken from:
+% /lustre/storeB/project/fou/kl/emep/ModelRuns/2019_REPORTING/VERIFICATION/STATISTICS/Res_EMEP01_L20EC_rv4_33.2017_h500-outliers_comday (file date: Aug 11 16:19)
+
+% in 2020 (for reporting 2018), the numbers in this table were taken from:
+% /lustre/storeB/project/fou/kl/emep/ModelRuns/2020_REPORTING/VERIFICATION/STATISTICS/Res_EMEP01_rv4_35_2018_tnoCRef2_h500_outliers_comday (file date: Jun 22 16:50)
+
+% in 2021 (for reporting 2019), the numbers in this table were taken from:
+
+\begin{center}
+\begin{tabular}{c|ccccccc}
+\hline\hline
+Component  & N$_{stat}$ &Obs. & Mod. &Bias (\%) & RMSE & Corr.& IOA\\
+\hline
+%NO2_in_Air ugN/m3
+\chem{NO_2} (\ugN)
+%                   & 73 & 2.03 & 1.90 &  -7 & 0.73 & 0.87 & 0.93\\%done2015
+%                   & 63 & 1.76 & 1.48 & -16 & 0.75 & 0.84 & 0.90\\%done2016
+%                   & 65 & 1.88 & 1.29 & -32 & 1.32 & 0.69 & 0.78\\%done2017
+%                   & 72 & 2.24 & 1.41 & -37 & 1.69 & 0.72 & 0.76\\%done2018
+%                   & 67 & 1.77 & 1.52 & -14 & 0.81 & 0.84 & 0.91\\%done2019
+                    & 73 & 1.71 & 1.49 & -13 & 0.68 & 0.87 & 0.92\\%done2020
+%SO2_in_Air ugS/m3
+\chem{SO_2} (\ugS)
+%                   & 71 & 0.42 & 0.37 & -11 & 0.36 & 0.53 & 0.70\\%done2015
+%                   & 53 & 0.43 & 0.43 &   0 & 0.24 & 0.64 & 0.79\\%done2016
+%                   & 54 & 0.34 & 0.38 &  10 & 0.36 & 0.47 & 0.65\\%done2017
+%                   & 58 & 0.33 & 0.29 & -10 & 0.40 & 0.40 & 0.59\\%done2018
+%                   & 59 & 0.41 & 0.33 & -19 & 0.66 & 0.57 & 0.63\\%done2019
+                    & 57 & 0.30 & 0.26 & -13 & 0.21 & 0.63 & 0.78\\%done2020
+%Sulphate_in_Air ugS/m3
+\chem{SO_4^{2-}}, sea salt corrected (\ugS) % OBS CHOOSE CORRECT UNIT!!!!
+%                   & 23 & 0.40 & 0.30 & -27 & 0.13 & 0.95 & 0.90\\%done2015
+%                   & 20 & 0.52 & 0.34 & -35 & 0.26 & 0.83 & 0.74\\%done2016
+%                   & 26 & 0.37 & 0.26 & -29 & 0.19 & 0.86 & 0.83\\%done2017
+%                   & 27 & 0.32 & 0.20 & -37 & 0.18 & 0.84 & 0.74\\%done2018
+%                   & 29 & 0.36 & 0.21 & -40 & 0.23 & 0.76 & 0.74\\%done2019
+                    & 24 & 0.38 & 0.21 & -44 & 0.24 & 0.87 & 0.69\\%done2020
+%Sulphate_in_Air ugS/m3
+\chem{SO_4^{2-}}, including sea salt (\ugS) % OBS CHOOSE CORRECT UNIT!!!!
+%                   & 40 & 0.53 & 0.42 & -22 & 0.16 & 0.89 & 0.88\\%done2015
+%                   & 28 & 0.58 & 0.38 & -35 & 0.27 & 0.76 & 0.72\\%done2016
+%                   & 33 & 0.44 & 0.37 & -16 & 0.16 & 0.83 & 0.86\\%done2017
+%                   & 33 & 0.41 & 0.29 & -30 & 0.19 & 0.81 & 0.75\\%done2018
+%                   & 34 & 0.46 & 0.29 & -36 & 0.25 & 0.77 & 0.72\\%done2019
+                    & 32 & 0.48 & 0.29 & -39 & 0.24 & 0.87 & 0.71\\%done2020
+%NO3-_in_Air ugN/m3
+\chem{NO_3^-} (\ugN) % OBS CHOOSE CORRECT UNIT!!!!
+%                   & 21 & 0.39 & 0.34 & -13 & 0.20 & 0.88 & 0.88\\%done2015
+%                   & 15 & 0.26 & 0.28 &  11 & 0.10 & 0.81 & 0.89\\%done2016
+%                   & 20 & 0.28 & 0.35 &  26 & 0.19 & 0.79 & 0.81\\%done2017
+%                   & 25 & 0.26 & 0.27 &   2 & 0.11 & 0.81 & 0.89\\%done2018
+%                   & 26 & 0.26 & 0.27 &   7 & 0.12 & 0.81 & 0.89\\%done2019
+                    & 25 & 0.27 & 0.31 &  15 & 0.12 & 0.78 & 0.87\\%done2020
+%HNO3_in_Air ugN/m3
+\chem{HNO_3} (\ugN)
+%                   & 11 & 0.19 & 0.10 & -45 & 0.20 & 0.42 & 0.52\\%done2015
+%                   & 10 & 0.12 & 0.12 &   3 & 0.11 & 0.32 & 0.50\\%done2016
+%                   & 14 & 0.26 & 0.11 & -60 & 0.52 & 0.09 & 0.26\\%done2017
+%                   & 17 & 0.12 & 0.09 & -20 & 0.07 & 0.62 & 0.70\\%done2018
+%                   & 18 & 0.12 & 0.09 & -27 & 0.08 & 0.64 & 0.68\\%done2019
+                    & 17 & 0.12 & 0.10 & -17 & 0.08 & 0.54 & 0.68\\%done2020
+%Sum_of_HNO3,_NO3-_in_air ugN/m3
+\chem{NO_3^-}+\chem{HNO_3} (\ugN)
+%                   & 42 & 0.51 & 0.45 & -12 & 0.16 & 0.83 & 0.89\\%done2015
+%                   & 31 & 0.44 & 0.48 &  10 & 0.14 & 0.86 & 0.91\\%done2016
+%                   & 38 & 0.47 & 0.56 &  18 & 0.15 & 0.90 & 0.91\\%done2017
+%                   & 36 & 0.42 & 0.41 &  -4 & 0.09 & 0.92 & 0.96\\%done2018
+%                   & 37 & 0.42 & 0.41 &  -2 & 0.09 & 0.91 & 0.95\\%done2019
+                    & 34 & 0.42 & 0.43 &   1 & 0.08 & 0.94 & 0.97\\%done2020
+%Ammonia_in_Air ugN/m3
+\chem{NH_3} (\ugN)
+%                   & 14 & 0.70 & 0.77 &  11 & 0.44 & 0.69 & 0.81\\%done2015
+%                   & 13 & 0.45 & 0.38 & -17 & 0.33 & 0.71 & 0.81\\%done2016
+%                   & 16 & 0.58 & 0.72 &  25 & 0.38 & 0.90 & 0.90\\%done2017
+%                   & 20 & 0.46 & 0.67 &  47 & 0.40 & 0.92 & 0.87\\%done2018
+%                   & 22 & 0.53 & 0.64 &  22 & 0.37 & 0.84 & 0.89\\%done2019
+                    & 20 & 0.64 & 0.68 &   7 & 0.28 & 0.91 & 0.95\\%done2020
+%NH4+_in_Air ugN/m3
+\chem{NH_4^+} (\ugN)
+%                   & 22 & 0.74 & 0.60 & -19 & 0.29 & 0.78 & 0.84\\%done2015
+%                   & 19 & 0.63 & 0.61 &  -4 & 0.18 & 0.87 & 0.93\\%done2016
+%                   & 19 & 0.56 & 0.50 & -10 & 0.26 & 0.70 & 0.83\\%done2017
+%                   & 26 & 0.47 & 0.38 & -18 & 0.23 & 0.65 & 0.79\\%done2018
+%                   & 26 & 0.45 & 0.37 & -17 & 0.25 & 0.67 & 0.81\\%done2019
+                    & 26 & 0.50 & 0.42 & -16 & 0.20 & 0.78 & 0.86\\%done2020
+%NH3+NH4+_in_Air ugN/m3
+\chem{NH_3}+\chem{NH_4^+} (\ugN)
+%                   & 36 & 1.32 & 1.39 &   5 & 0.58 & 0.81 & 0.88\\%done2015
+%                   & 30 & 1.18 & 1.17 &  -1 & 0.49 & 0.84 & 0.91\\%done2016
+%                   & 32 & 1.27 & 1.53 &  21 & 1.07 & 0.74 & 0.79\\%done2017
+%                   & 31 & 1.16 & 1.35 &  16 & 0.95 & 0.76 & 0.79\\%done2018
+%                   & 33 & 1.13 & 1.68 &  50 & 2.41 & 0.48 & 0.41\\%done2019
+                    & 31 & 1.28 & 1.59 &  24 & 1.47 & 0.70 & 0.69\\%done2020
+%SO4_wet_dep. mgS/m2 (unit error removed in 2018)
+\chem{SO_4^{2-}} wd (\mgSm)
+%                   & 47 &  9353 & 8827 & -6  &  94 & 0.69 & 0.82\\%done2015
+%                   & 47 & 10653 & 8908 & -16 & 125 & 0.61 & 0.74\\%done2016
+%                   & 51 &  8994 & 8026 & -11 & 123 & 0.67 & 0.76\\%done2017
+%                   & 49 &  8018 & 6557 & -18 &  78 & 0.70 & 0.82\\%done2018
+%                   & 52 &  9116 & 6657 & -27 &  99 & 0.64 & 0.75\\%done2019
+                    & 43 &  9587 & 6149 & -36 & 253 & 0.76 & 0.61\\%done2020
+%SO4_conc._in_precip. mgS/l (unit error removed in 2018)
+\chem{SO_4^{2-}} cp (\mgSl)
+%                   & 47 & 0.28 & 0.25 & -11 & 0.13 & 0.72 & 0.83\\%done2015
+%                   & 49 & 0.29 & 0.24 & -18 & 0.16 & 0.61 & 0.76\\%done2016
+%                   & 51 & 0.26 & 0.20 & -23 & 0.15 & 0.75 & 0.80\\%done2017
+%                   & 49 & 0.21 & 0.17 & -20 & 0.08 & 0.84 & 0.89\\%done2018
+%                   & 52 & 0.25 & 0.16 & -35 & 0.17 & 0.66 & 0.68\\%done2019
+                    & 43 & 0.30 & 0.19 & -38 & 0.27 & 0.60 & 0.55\\%done2020
+%Ammonium_wet_dep. mgN/m2 (unit error removed in 2018)
+\chem{NH_4^+} wd (\mgNm)
+%                   & 47 & 12185 & 13641 & 12 & 129 & 0.82 & 0.89\\%done2015
+%                   & 47 & 12554 & 14080 & 12 & 140 & 0.75 & 0.85\\%done2016
+%                   & 51 & 13858 & 13586 & -2 & 196 & 0.46 & 0.68\\%done2017
+%                   & 48 & 12471 & 13911 & 12 & 118 & 0.82 & 0.89\\%done2018
+%                   & 51 & 12646 & 14732 & 17 & 161 & 0.70 & 0.81\\%done2019
+                    & 42 & 11065 & 11625 &  5 & 185 & 0.62 & 0.78\\%done2020
+%Ammonium_conc._in_precip. mgN/l (unit error removed in 2018)
+\chem{NH_4^+} cp (\mgNl)
+%                   & 47 & 0.35 & 0.37 &  5 & 0.17 & 0.58 & 0.75\\%done2015
+%                   & 47 & 0.33 & 0.36 &  9 & 0.18 & 0.56 & 0.75\\%done2016
+%                   & 51 & 0.40 & 0.37 & -7 & 0.21 & 0.50 & 0.71\\%done2017
+%                   & 48 & 0.33 & 0.36 &  9 & 0.13 & 0.82 & 0.88\\%done2018
+%                   & 51 & 0.35 & 0.38 & 11 & 0.21 & 0.57 & 0.73\\%done2019
+                    & 42 & 0.38 & 0.38 &  0 & 0.20 & 0.62 & 0.78\\%done2020
+%Nitrate_wet_dep. mgN/m2 (unit error removed in 2018)
+\chem{NO_3^-} wd (\mgNm)
+%                   & 47 & 10549 & 10390 & -2 & 125 & 0.69 & 0.81\\%done2015
+%                   & 48 & 10661 & 10778 &  1 & 136 & 0.70 & 0.82\\%done2016
+%                   & 52 & 10312 &  9995 & -3 & 122 & 0.65 & 0.81\\%done2017
+%                   & 49 &  9783 &  9623 & -2 &  89 & 0.79 & 0.88\\%done2018
+%                   & 53 & 10394 & 10307 & -1 &  87 & 0.79 & 0.89\\%done2019
+                    & 43 &  9003 &  8348 & -7 & 156 & 0.58 & 0.73\\%done2020
+%Nitrate_conc._in_precip. mgN/l (unit error removed in 2018)
+\chem{NO_3^-} cp (\mgNl)
+%                   & 47 & 0.29 & 0.28 &  -6 & 0.12 & 0.59 & 0.77\\%done2015
+%                   & 48 & 0.26 & 0.27 &   4 & 0.12 & 0.64 & 0.79\\%done2016
+%                   & 52 & 0.28 & 0.26 &  -8 & 0.11 & 0.72 & 0.83\\%done2017
+%                   & 49 & 0.25 & 0.24 &  -4 & 0.09 & 0.81 & 0.88\\%done2018
+%                   & 53 & 0.26 & 0.24 &  -9 & 0.10 & 0.79 & 0.87\\%done2019
+                    & 43 & 0.30 & 0.27 & -12 & 0.24 & 0.46 & 0.58\\%done2020
+%Precipitation mm
+Precipitation (mm)
+%                   & 47 & 39526 & 40471 &  2 & 236 & 0.81 & 0.88\\%done2015
+%                   & 49 & 44641 & 45401 &  2 & 258 & 0.86 & 0.91\\%done2016
+%                   & 53 & 42324 & 46557 & 10 & 223 & 0.89 & 0.93\\%done2017
+%                   & 50 & 44463 & 47427 &  7 & 269 & 0.77 & 0.87\\%done2018
+%                   & 53 & 45168 & 48669 &  8 & 271 & 0.78 & 0.87\\%done2019
+                    & 43 & 33815 & 37004 &  9 & 259 & 0.84 & 0.90\\%done2020
+\hline\hline
+
+Ozone daily max (ppb) 
+% & 111 & 41.12 & 41.40 &  1 & 2.80 & 0.79 & 0.87\\%done2015
+% & 112 & 39.92 & 39.85 &  0 & 2.75 & 0.73 & 0.83\\%done2016
+% & 111 & 41.36 & 42.81 &  4 & 3.57 & 0.76 & 0.83\\%done2017
+% & 118 & 39.72 & 42.63 &  7 & 4.65 & 0.70 & 0.74\\%done2018
+% & 115 & 40.37 & 40.90 &  1 & 3.10 & 0.80 & 0.86\\%done2019
+  & 117 & 42.60 & 41.46 & -3 & 3.03 & 0.82 & 0.84\\%done2020
+Ozone daily mean (ppb) 
+% & 111 & 31.84 & 34.40 &  8 & 4.57 & 0.71 & 0.75\\%done2015
+% & 112 & 30.42 & 33.05 &  9 & 4.80 & 0.69 & 0.71\\%done2016
+% & 111 & 32.10 & 35.14 &  9 & 5.21 & 0.68 & 0.71\\%done2017
+% & 118 & 30.55 & 35.10 & 15 & 6.44 & 0.64 & 0.66\\%done2018
+% & 116 & 31.40 & 34.01 &  8 & 4.91 & 0.70 & 0.73\\%done2019
+  & 117 & 33.00 & 34.36 &  4 & 4.14 & 0.72 & 0.76\\%done2020
+\hline\hline
+%PM10 ug/m3
+\PM[10] (\ug)
+%  &  40 &  14.34 &  11.21 & -22 & 5.19 & 0.66 & 0.72\\%done2014
+%  &  42 &  13.43 &   9.69 & -28 & 5.41 & 0.70 & 0.68\\%done2015
+%  &  33 &  13.95 &  10.58 & -24 & 4.89 & 0.74 & 0.74\\%done2016
+%  &  41 &  14.61 &  13.12 & -10 & 3.49 & 0.74 & 0.84\\%done2017
+%  &  30 &  12.76 &   9.91 & -22 & 4.08 & 0.72 & 0.76\\%done2018
+%  &  44 &  12.41 &   9.71 & -22 & 3.86 & 0.78 & 0.80\\%done2018b
+%  &  30 &  12.73 &   9.90 & -22 & 3.86 & 0.76 & 0.77\\%done2019
+   &  31 &  14.09 &  11.01 & -22 & 4.34 & 0.66 & 0.70\\%done2020
+%PM25 ug/m3
+\PM[2.5] (\ug)
+%  &  35 &   9.48 &   7.64 & -19 & 2.90 & 0.84 & 0.84\\%done2015
+%  &  27 &   9.47 &   8.26 & -13 & 2.92 & 0.77 & 0.84\\%done2016
+%  &  30 &   8.62 &   8.49 &  -1 & 2.37 & 0.84 & 0.91\\%done2017
+%  &  24 &   7.84 &   6.64 & -15 & 2.63 & 0.79 & 0.86\\%done2018
+%  &  34 &   8.04 &   7.25 & -10 & 2.74 & 0.71 & 0.82\\%done2018b
+%  &  25 &   7.45 &   6.00 & -19 & 2.42 & 0.81 & 0.84\\%done2019
+   &  26 &   8.28 &   7.09 & -14 & 2.42 & 0.81 & 0.87\\%done2020
+\chem{SO_4^{2-}}, including sea salt (\ug)%Sulfate_in_Air, including sea salt, ug/m3 (also included in SN chapter, but there as ug(S)/m3)
+%  & 37  &  1.59  &   1.28   &  -19 & 0.54 & 0.80 & 0.85\\%done2015
+%  & 28  &  1.74  &   1.27   &  -27 & 0.69 & 0.80 & 0.76\\%done2016
+%  & 33  &  1.32  &   1.10   &  -16 & 0.49 & 0.83 & 0.87\\%done2017
+%  & 33  &  1.23  &   0.86   &  -30 & 0.58 & 0.81 & 0.75\\%done2018
+%  & 34  &  1.37  &   0.87   &  -36 & 0.76 & 0.77 & 0.72\\%done2019
+   & 33  &  1.41  &   0.86   &  -39 & 0.72 & 0.88 & 0.72\\%done2020
+\chem{SO_4^{2-}}, sea salt corrected (\ug)%Sulfate_in_Air, sea salt corrected, ug/m3 (also included in SN chapter, but there as ug(S)/m3)
+%  & 23  &  1.21  &  0.89   &  -27 &  0.39 & 0.95 & 0.90\\%done2015
+%  & 20  &  1.56  &  1.02   &  -34 &  0.79 & 0.83 & 0.74\\%done2016
+%  & 26  &  1.10  &  0.78   &  -29 &  0.56 & 0.86 & 0.83\\%done2017
+%  & 27  &  0.95  &  0.60   &  -37 &  0.54 & 0.84 & 0.74\\%done2018
+%  & 29  &  1.08  &  0.65   &  -40 &  0.69 & 0.75 & 0.73\\%done2019
+   & 25  &  1.12  &  0.64   &  -42 &  0.70 & 0.85 & 0.69\\%done2020
+%SO4_in_PM10 ug/m3
+\chem{SO_4^{2-}} in \PM[10] (\ug)
+%  & 14  &  1.62  &   1.29  &   -21 & 0.43 &  0.85 & 0.82\\%done2014
+%  & 14  &  1.54  &   0.99  &   -35 & 0.67 &  0.60 & 0.62\\%done2015
+%  & 12  &  1.61  &   0.94  &   -42 & 0.72 &  0.85 & 0.66\\%done2016
+%  & 14  &  1.76  &   1.26  &   -28 & 0.58 &  0.92 & 0.86\\%done2017
+%  & 12  &  1.47  &   1.01  &   -31 & 0.57 &  0.91 & 0.85\\%done2018
+%  & 13  &  1.61  &   1.09  &   -32 & 0.58 &  0.94 & 0.87\\%done2019
+   & 13  &  1.62  &   1.01  &   -37 & 0.70 &  0.91 & 0.85\\%done2020
+%SO4_in_PM2.5 ug/m3
+%\chem{SO_4^{2-}} in \PM[2.5] (\ug)
+%& 16   &   2.14   &  1.58  &   -26 & 1.64 &  0.65 & 0.62\\%done2014
+%& 15   &   1.78   &  1.40  &   -21 & 1.17 &  0.44 & 0.60\\%done2015
+%&  2   &   2.01   &  1.43  &   -29 & 0.58 &  1.00 & 0.73\\%done2016-commdays
+%&  7   &   1.98   &  1.02  &   -24 & 1.77 &  0.54 & 0.50\\%done2016
+%&  2   &   1.89   &  1.40  &   -26 & 0.50 &  1.00 & 0.37\\%done2017
+%&  1   &   1.51   &  0.63  &   -58 & 0.88 &  0.00 & 0.00\\%done2018
+%&  1   &   1.71   &  0.73  &   -57 & 0.98 &  0.00 & 0.00\\%done2019
+%&  2   &   1.81   &  0.87  &   -52 & 0.96 &  1.00 & 0.58\\%done2020 (too few stations)
+%NO3-_in_Air ug/m3  (also included in SN chapter, but there as ug(N)/m3)
+\chem{NO_3^-} (\ug)
+%  & 16  &  2.40  &  2.02 &  -16 & 0.68 & 0.93 & 0.94\\%done2014
+%  & 18  &  1.85  &  1.65 &  -11 & 0.97 & 0.86 & 0.86\\%done2015
+%  & 15  &  1.14  &  1.26 &   11 & 0.46 & 0.81 & 0.89\\%done2016
+%  & 20  &  1.23  &  1.55 &   26 & 0.84 & 0.79 & 0.81\\%done2017
+%  & 25  &  1.15  &  1.18 &    2 & 0.49 & 0.81 & 0.89\\%done2018
+%  & 26  &  1.15  &  1.23 &    7 & 0.55 & 0.80 & 0.89\\%done2019
+   & 25  &  1.17  &  1.35 &   15 & 0.55 & 0.80 & 0.88\\%done2020
+%NO3_in_PM10 ug/m3
+\chem{NO_3^-} in \PM[10] (\ug)
+%  & 14  &  1.40  &  1.58  &   12 & 0.74 & 0.60 & 0.73\\%done2014
+%  & 14  &  1.14  &  1.17  &    3 & 0.44 & 0.77 & 0.88\\%done2015
+%  & 12  &  1.13  &  1.34  &   19 & 0.47 & 0.91 & 0.92\\%done2016
+%  & 14  &  1.35  &  1.91  &   42 & 0.72 & 0.83 & 0.80\\%done2017
+%  & 12  &  1.02  &  1.33  &   30 & 0.56 & 0.47 & 0.63\\%done2018
+%  & 13  &  1.11  &  1.45  &   31 & 0.61 & 0.44 & 0.64\\%done2019
+   & 13  &  1.01  &  1.23  &   22 & 0.55 & 0.29 & 0.59\\%done2020
+%NO3_in_PM25 ug/m3
+\chem{NO_3^-} in \PM[2.5] (\ug) $\star$
+%  &  9  &   3.36  &   2.18 &   -35 & 4.06 & 0.90 & 0.52\\%done2014
+%  & 14  &   1.18  &   1.58 &    34 & 0.69 & 0.90 & 0.90\\%done2015
+%  &  2  &   2.33  &   4.92 &   111 & 2.84 &-1.00 & 0.11\\%done2016
+%  &  2  &   2.84  &   5.22 &    84 & 2.76 & 1.00 & 0.25\\%done2017
+%  &  1  &   3.02  &   3.63 &    20 & 0.61 & 0.00 & 0.00\\%done2018
+%  &  1  &   3.50  &   3.98 &    14 & 0.48 & 0.00 & 0.00\\%done2019
+%  & 12  &   1.27  &   2.16 &    70 & 0.98 & 0.88 & 0.76\\%done2019b
+%st   &  2  &   1.31  &   1.81 &    39 & 0.57 & 1.00 & 0.93\\%done2020
+   &  7  &   1.87  &   2.06 &    11 & 0.546 & 0.91 & 0.93\\%done2020
+%NH4+_in_Air ug/m3
+\chem{NH_4^+} (\ug) % OBS CHOOSE CORRECT UNIT!!!!
+%  & 22  &   0.99  &   0.73  &  -26 & 0.39 & 0.92 & 0.88\\%done2014
+%  & 22  &   0.95  &   0.77  &  -19 & 0.37 & 0.78 & 0.84\\%done2015
+%  & 19  &   0.82  &   0.79  &   -4 & 0.23 & 0.87 & 0.93\\%done2016
+%  & 19  &   0.65  &   0.63  &   -3 & 0.22 & 0.88 & 0.93\\%done2017
+%  & 26  &   0.60  &   0.50  &  -18 & 0.30 & 0.65 & 0.79\\%done2018
+%  & 26  &   0.53  &   0.47  &  -10 & 0.21 & 0.84 & 0.91\\%done2019
+   & 26  &   0.65  &   0.55 &   -16 & 0.25 & 0.78 & 0.86\\%done2020
+%NH4_in_PM10 ug/m3
+%\chem{NH_4^+} in \PM[10] (\ug) 
+% & 7   &   0.78  &   0.60  & -23 & 0.38&  0.64&  0.77\\%done2015
+% & 1   &   1.85  &   1.89  &   2 & 0.03&  0.00&  0.00\\%done2016
+% & 2   &   1.27  &   1.42  &  12 & 0.15&  1.00&  0.83\\%done2017
+% \\%done2020 (too few stations)
+%NH4_in_PM10 ug/m3
+\chem{NH_4^+} in \PM[10] (\ug) $\star$
+&  3  &   1.37  &   1.45  &   6 & 0.22&  0.79&  0.49\\%done2020
+%NH4_in_PM2.5 ug/m3
+\chem{NH_4^+} in \PM[2.5] (\ug) $\star$
+% & 16  &   0.83  &   0.97  &  16 & 0.39&  0.80&  0.84\\%done2014
+% & 14  &   0.84  &   0.90  &   7 & 0.25&  0.87&  0.93\\%done2015
+% &  2  &   1.39  &   1.95  &  40 & 0.65& -1.00&  0.38\\%done2016
+% &  2  &   1.39  &   1.98  &  43 & 0.67&  1.00&  0.31\\%done2017 
+% \\%done2020 (too few stations with 75% coverage)
+&  7  &   1.12  &   0.90  & -20 & 0.27&  0.59&  0.60\\%done2020
+%EC_in_PM10 ugC/m3
+EC in \PM[10] (\ugC) $\star$
+  & 3  &   0.36  &   0.39  &   8 & 0.09 & 0.48 & 0.66\\%done2020
+%EC_in_PM2.5 ugC/m3
+EC in \PM[2.5] (\ugC) $\star$
+%  & 16  &   0.38  &   0.34  &  -9 & 0.25 & 0.67 & 0.75\\%done2014
+%  & 15  &   0.33  &   0.35  &   5 & 0.18 & 0.82 & 0.88\\%done2015
+%  &  3  &   0.87  &   0.52  & -41 & 0.48 & 0.42 & 0.59\\%done2016-commdays
+%  & 10  &   0.43  &   0.34  & -22 & 0.28 & 0.64 & 0.76\\%done2016
+%  &  3  &   0.68  &   0.80  &  18 & 0.30 & 1.00 & 0.91\\%done2017
+%  &  2  &   0.78  &   0.98  &  27 & 0.41 & 1.00 & 0.87\\%done2018 
+%  &  5  &   0.45  &   0.52  &  14 & 0.26 & 0.98 & 0.92\\%done2018c (common days = 180)
+%  &  1  &   0.37  &   0.26  & -30 & 0.11 & 0.00 & 0.00\\%done2019
+%  &  8  &   0.26  &   0.24  &  -7 & 0.09 & 0.29 & 0.52\\%done2019b
+   & 12  &   0.35  &   0.44  &  24 & 0.17 & 0.89 & 0.84\\%done2020
+%OC_in_PM10 ugC/m3
+OC in \PM[10] (\ugC) $\star$
+  & 3  &   3.20  &   1.67  & -48 & 1.84 &-0.60 & 0.45\\%done2020
+%OC_in_PM2.5 ugC/m3
+OC in \PM[2.5] (\ugC) $\star$
+%  & 16  &   2.49  &   1.07  & -57 & 1.73 & 0.70 & 0.49\\%done2014
+%  & 15  &   2.48  &   1.05  & -58 & 1.68 & 0.81 & 0.52\\%done2015
+%  &  3  &   3.19  &   1.52  & -52 & 1.69 & 0.96 & 0.53\\%done2016-commdays
+%  & 10  &   2.37  &   1.07  & -55 & 1.38 & 0.90 & 0.53\\%done2016
+%  &  3  &   3.96  &   2.07  & -48 & 1.94 & 0.98 & 0.66\\%done2017
+%  &  2  &   3.97  &   2.39  & -40 & 1.69 & 1.00 & 0.67\\%done2018
+%  &  6  &   2.60  &   1.34  & -48 & 1.46 & 0.81 & 0.71\\%done2018c (common days = 180)
+%  &  1  &   2.90  &   0.70  & -76 & 2.20 & 0.00 & 0.00\\%done2019
+%  &  8  &   1.86  &   0.72  & -61 & 1.35 &-0.52 & 0.36\\%done2019b
+   & 12  &   2.77  &   1.91  & -31 & 1.53 & 0.26 & 0.53\\%done2020
+%Na+_in_air ug/m3
+Na+ (\ug)
+%  & 26  &   0.78  &   0.89  &  14 &  0.53 & 0.78 & 0.87\\%done2014
+%  & 24  &   0.82  &   0.89  &   9 &  0.53 & 0.82 & 0.89\\%done2015
+%  & 22  &   0.69  &   0.73  &   5 &  0.62 & 0.71 & 0.83\\%done2016
+%  & 21  &   0.90  &   1.06  &  18 &  0.33 & 0.97 & 0.97\\%done2017
+%  & 24  &   0.74  &   0.74  &  -1 &  0.29 & 0.93 & 0.96\\%done2018
+%  & 24  &   0.86  &   0.78  &  -9 &  0.43 & 0.89 & 0.94\\%done2019
+   & 23  &   0.86  &   0.72  & -16 &  0.64 & 0.85 & 0.87\\%done2020
+%Na_in_PM10 ug/m3
+Na+ in \PM[10] (\ug)
+%  &  7  &   0.48  &   0.22 &  -53 &  0.47 & 0.93 & 0.49\\%done2015
+%  &  6  &   0.69  &   0.20 &  -71 &  0.86 & 0.93 & 0.45\\%done2016
+%  &  7  &   0.45  &   0.29 &  -36 &  0.41 & 0.84 & 0.64\\%done2017
+%  &  6  &   0.43  &   0.26 &  -40 &  0.40 & 0.75 & 0.58\\%done2018
+%  &  6  &   0.46  &   0.27 &  -41 &  0.39 & 0.84 & 0.64\\%done2019
+   &  6  &   0.42  &   0.25 &  -41 &  0.38 & 0.80 & 0.62\\%done2020
+%Na_in_PM2.5 ug/m3
+Na+ in \PM[2.5] (\ug) $\star$
+%  & 14  &   0.15  &   0.15 &    0 &  0.04 & 0.92 & 0.96\\%done2014
+%  & 13  &   0.10  &   0.08 &  -18 &  0.05 & 0.70 & 0.81\\%done2015
+%  &  2  &   0.06  &   0.02 &  -58 &  0.04 &-1.00 & 0.16\\%done2016
+%  &  2  &   0.11  &   0.05 &  -55 &  0.08 &-1.00 & 0.10\\%done2017
+%  &  1  &   0.05  &   0.01 &  -77 &  0.04 & 0.00 & 0.00\\%done2018
+%  &  1  &   0.07  &   0.02 &  -77 &  0.05 & 0.00 & 0.00\\%done2019
+%  & 12  &   0.10  &   0.12 &   23 &  0.08 & 0.55 & 0.68\\%done2019b
+%  &  2  &   0.07  &   0.01 &  -81 &  0.06 &-1.00 & 0.42\\%done2020 (too few stations with 75% coverage)
+  &  8  &   0.11  &   0.15 &   41 &  0.12 & 0.80 & 0.70\\%done2020 (too few stations)
+\hline\hline
+
+\end{tabular}
+
+\vspace{0.2cm}
+
+\caption{Comparison of model results and observations for 2019. Annual
+averages over all EMEP sites with measurements.  N$_{stat}$= number of stations,
+wd=wet deposition (integrated over the year and stations), cp= concentration
+in precipitation, Corr. = spatial correlation coefficient, RMSE = root mean
+square error, IOA = index of agreement.}
+\label{tab:tableSN}
+\end{center}
+\end{table}
+
+
+
+
+
+
 %\cleardoublepage
 
-\bibliographystyle{copernicus}         % change bibliography-name after each
-\renewcommand\bibname{References}      % bibliographystyle command!
-\addcontentsline{toc}{section}{References}
-\bibliography{Refs,EMEP_Reports}
+%\bibliographystyle{copernicus}         % change bibliography-name after each
+%\renewcommand\bibname{References}      % bibliographystyle command!
+%\addcontentsline{toc}{section}{References}
+%\bibliography{Refs,EMEP_Reports}
 
