Added published GenChem and uEMEP refs

--- a/uEMEP.bib
+++ b/uEMEP.bib
@@ -1,3 +1,17 @@
+
+@Article{Denby:2020,
+ AUTHOR = {Denby, B. R. and Gauss, M. and Wind, P. and Mu, Q. and Gr{\o}tting W{\ae}rsted, E. and Fagerli, H. and Valdebenito, A. and Klein, H.},
+ TITLE = {Description of the uEMEP\_v5 downscaling approach for  the
+            EMEP MSC-W chemistry transport model},
+ JOURNAL = gmd,
+ VOLUME = 13,
+ YEAR = 2020,
+ NUMBER = 12,
+ PAGES = {6303--6323},
+ URL = {https://gmd.copernicus.org/articles/13/6303/2020/},
+ DOI = {10.5194/gmd-13-6303-2020}
+}
+
 @Article{denby-2020,
 AUTHOR = {Denby, B.R. and Gauss, M. and Wind, P. and Mu, Q. and Gr{\o}tting W{\ae}rsted, E. and Fagerli, H. and Valdebenito, A. and Klein, H.},
 TITLE = {Description  of  the  uEMEP\_v5  downscaling approach for the EMEP MSC-W chemistry transport model},
